Bugfix: tooltip flicker and alignment

--- a/components/lib/tooltip/Tooltip.css
+++ b/components/lib/tooltip/Tooltip.css
@@ -1,23 +1,24 @@
 .p-tooltip {
-    position:absolute;
-    display:none;
-    padding: .25em .5rem;
+    position: absolute;
+    display: none;
+    pointer-events: none;
+    padding: 0.25em 0.5rem;
     max-width: 12.5rem;
 }
 
 .p-tooltip.p-tooltip-right,
 .p-tooltip.p-tooltip-left {
-    padding: 0 .25rem;
+    padding: 0 0.25rem;
 }
 
 .p-tooltip.p-tooltip-top,
 .p-tooltip.p-tooltip-bottom {
-    padding:.25em 0;
+    padding: 0.25em 0;
 }
 
 .p-tooltip .p-tooltip-text {
-   white-space: pre-line;
-   word-break: break-word;
+    white-space: pre-line;
+    word-break: break-word;
 }
 
 .p-tooltip-arrow {
@@ -31,31 +32,31 @@
 .p-tooltip-right .p-tooltip-arrow {
     top: 50%;
     left: 0;
-    margin-top: -.25rem;
-    border-width: .25em .25em .25em 0;
+    margin-top: -0.25rem;
+    border-width: 0.25em 0.25em 0.25em 0;
 }
 
 .p-tooltip-left .p-tooltip-arrow {
     top: 50%;
     right: 0;
-    margin-top: -.25rem;
-    border-width: .25em 0 .25em .25rem;
+    margin-top: -0.25rem;
+    border-width: 0.25em 0 0.25em 0.25rem;
 }
 
 .p-tooltip.p-tooltip-top {
-    padding: .25em 0;
+    padding: 0.25em 0;
 }
 
 .p-tooltip-top .p-tooltip-arrow {
     bottom: 0;
     left: 50%;
-    margin-left: -.25rem;
-    border-width: .25em .25em 0;
+    margin-left: -0.25rem;
+    border-width: 0.25em 0.25em 0;
 }
 
 .p-tooltip-bottom .p-tooltip-arrow {
     top: 0;
     left: 50%;
-    margin-left: -.25rem;
-    border-width: 0 .25em .25rem;
+    margin-left: -0.25rem;
+    border-width: 0 0.25em 0.25rem;
 }
